--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
         .bg {
             width: 100%;
-            height: 90px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -38,6 +37,12 @@
             margin-top: 25px;
             position: relative;
 
+        }
+
+        .bg img {
+            width: 90%;
+            max-width: 150px;
+            padding: 20px 0;
         }
 
         .home {
@@ -87,7 +92,8 @@
             justify-content: space-between;
             align-items: center;
             width: 100%;
-            height: 125px;
+            max-width: 600px;
+            margin: 0 auto;
             position: relative;
         }
 
@@ -160,12 +166,16 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            max-width: 600px;
+            margin: 0 auto;
 
         }
 
+        .contacts > div {
+            width: 33.333%;
+        }
+
         .circle1 {
-            width: 50px;
-            height: 50px;
             border-radius: 50%;
             background-image: url(imgs/8.png);
             background-position: center;
@@ -175,8 +185,6 @@
         }
 
         .circle2 {
-            width: 50px;
-            height: 50px;
             border-radius: 50%;
             background-image: url(imgs/9.png);
             background-position: center;
@@ -186,8 +194,6 @@
         }
 
         .circle3 {
-            width: 50px;
-            height: 50px;
             border-radius: 50%;
             background-image: url(imgs/10.png);
             background-position: center;
@@ -196,9 +202,14 @@
             background-color: #683C5A;
         }
 
+        .circle1, .circle2, .circle3 {
+            width: 60px;
+            height: 60px;
+        }
+
         .circle4 {
-            width: 30px;
-            height: 20px;
+           width: 40px;
+           height: 40px;
             border-radius: 50%;
             /* background-image: url(imgs/7.png); */
             background-position: center;
@@ -211,8 +222,8 @@
         }
 
         .circle5 {
-            width: 30px;
-            height: 20px;
+           width: 40px;
+           height: 40px;
             border-radius: 50%;
             /* background-image: url(imgs/6.png); */
             background-position: center;
@@ -345,20 +356,20 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            display: inline-block;
-
+            width: 100%;
         }
 
         .inactive-img,
         .active-img {
-            width: 90px;
-            height: 90px;
+            width: 100%;
+            max-width: 130px;
+            height: 170px;
             transition: transform 0.3s ease-in-out;
         }
 
         .active-img {
-            height: 120px;
-            width: 120px;
+            height: 200px;
+            max-width: 200px;
             transform: scale(1);
         }
 
@@ -412,49 +423,42 @@
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
-            width: 90%;
-            height: 60px;
+            width: 100%;
+        }
+        
+        .paragraph img {
+            width: 100%;
         }
 
         .top {
-            background-image: url(imgs/15.png);
-            border-bottom: #FFE55E solid;
+            border-bottom: 2px #FFE55E solid;
+            width: 90%;
+            max-width: 500px;
+            margin-top: 1em;
         }
 
         .bot {
-            background-image: url(imgs/4.png);
-            margin-bottom: 0px;
-            margin-top: -3px;
-
+            width: 90%;
+            max-width: 500px;
+            margin: 2em 0;
         }
 
         /* Media Queries for Responsiveness */
 
         @media (min-width: 480px) and (max-width: 600px) {
-            .bot {
-                max-width: 60%;
-                height: 65px;
-                margin: 0 auto;
-            }
-
-            .top {
-                max-width: 54%;
-                height: 65px;
-                margin: 0 auto;
-            }
             .footerHome{
                 left:40% ;
             }
-            .active-img{
+            /* .active-img{
                 width: 130px;
                 height: 130px;
                 transform: scale(1);
-            }
-            .inactive-img{
+            } */
+            /* .inactive-img{
                 width: 110px;
                 height: 110px;
                 transform: scale(1);
-            }
+            } */
             .carousel {
                 width: 100%;
             }
@@ -467,21 +471,10 @@
         }
 
         @media (min-width: 840px) and (max-width: 1440px) {
-            .bot {
-                max-width: 25% !important;
-                height: 65px;
-                margin: 0 auto;
-            }
-
-            .top {
-                max-width: 25% !important;
-                height: 65px;
-                margin: 0 auto;
-            }
             .footerHome{
                 left:40% ;
             }
-            .active-img{
+            /* .active-img{
                 width: 130px;
                 height: 130px;
                 transform: scale(1);
@@ -490,7 +483,7 @@
                 width: 110px;
                 height: 110px;
                 transform: scale(1);
-            }
+            } */
             .carousel {
                 width: 100%;
             }
@@ -503,21 +496,11 @@
         }
 
         @media (min-width: 601px) and (max-width: 779px) {
-            .bot {
-                max-width: 50%;
-                height: 65px;
-                margin: 0 auto;
-            }
 
-            .top {
-                max-width: 43%;
-                height: 65px;
-                margin: 0 auto;
-            }
             .footerHome{
                 left:40% ;
-            }
-            .active-img{
+         }
+        /*    .active-img{
                 width: 130px;
                 height: 130px;
                 transform: scale(1);
@@ -526,30 +509,11 @@
                 width: 110px;
                 height: 110px;
                 transform: scale(1);
-            }
+            } */
 
-        }
-
-        @media (min-width: 347px) and (max-width: 480px) {
-            .bot {
-                max-width: 80%;
-                height: 65px;
-                margin: 0 auto;
-            }
-
-            .top {
-                max-width: 74%;
-                height: 65px;
-                margin: 0 auto;
-            }
         }
 
         @media (min-width: 768px) {
-            .paragraph {
-                max-height: 65px;
-                max-width: 38%;
-            }
-
             .center h1 {
                 font-size: 20px;
             }
@@ -625,8 +589,12 @@
             </span> -->
             <!-- <p>نحن نبيع ونشتري أرقى الذهب والمجوهرات المستعملة بأسعار يمكن الوصول إليها بسهولة وبضمان فضي</p> -->
 
-            <div class="paragraph top"></div>
-            <div class="paragraph bot"></div>
+            <div class="paragraph top">
+                <img src="./imgs/15.png">
+            </div>
+            <div class="paragraph bot">
+                <img src="./imgs/14.png">
+            </div>
 
         </div>
 
@@ -639,7 +607,7 @@
                     <div class="inactive-img carousel-image1"></div>
                     <!-- <div class="dark-overlay"></div> -->
                 </div>
-                <div>
+                <div class="image-container">
                     <div class="active-img carousel-image2"></div>
                 </div>
                 <div class="image-container">
