--- a/index.html
+++ b/index.html
@@ -588,14 +588,21 @@
             }
         }
 
-        @media (max-height: 650px) {
+        @media (max-height: 670px) {
             .bg img {
-                width: 90px;
+                width: 100px;
                 padding: 10px 0;
+            }
+            .circle4, .circle5 {
+                width: 25px;
+                height: 25px;
+            }
+            .home, .footerHome {
+                font-size: 14px;
             }
         }
         
-        @media (max-height: 580px) {
+        @media (max-height: 585px) {
             .bg img {
                 width: 70px;
                 padding: 10px 0;
@@ -610,6 +617,38 @@
             .bot {
                 margin-bottom: 0.2em ;
             }
+        }
+        @media (max-height: 530px) {
+           .circles {
+            padding-top: 5px;
+           }
+           .center {
+            padding-top: 5px;
+           }
+           .footer {
+            padding: 10px 20px;
+            padding-top:20px;
+           }
+        }
+
+        @media (max-height: 490px) {
+           .top {
+            width: 120px;
+           }
+           .bot {
+            width: 190px;
+           }
+           .inactive-img {
+            width: 90px;
+            height: 70px;
+           }
+           .active-img {
+            width: 100px;
+            height: 80px;
+           }
+           .scroll-container {
+            margin-top: 0;
+           }
         }
     </style>
 
